added font awesome cdn

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TypeScript Tutorial</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
+  <title>TypeScript Tutorial</title>
 </head>
 <body>
 
@@ -34,7 +35,7 @@
         <input type="number" id="amount">
       </div>
 
-      <button>Add</button>
+      <button class="add-btn">Add</button>
       
     </form>
   </footer>
@@ -45,8 +46,8 @@
         
     </ul>
   </div>
-   
   <script type="module" src="./src/main.ts"></script>
-
+  
+  <!-- Font Awesome Script tag -->
 </body>
 </html>
