--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Font awesome cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
   <title>TypeScript Tutorial</title>
@@ -41,6 +42,7 @@
   </footer>
 
   <div class="wrapper">
+    <button class="clear-btn">Clear All</button>
     <!-- output list -->
     <ul class="item-list">
         
@@ -48,6 +50,5 @@
   </div>
   <script type="module" src="./src/main.ts"></script>
   
-  <!-- Font Awesome Script tag -->
 </body>
 </html>
